# poetry-react-template

./: .coveragerc  .gitignore  README.md  poetry_scripts.py  pyproject.toml
client/: .eslintignore  .eslintrc.json  package.json
client/.storybook/: main.js
client/src/: App.css  App.tsx  config.ts
client/src/ipc/: handler.ts  types.ts
client/src/stories/: 1-Button.stories.jsx
resources/: config.ini  logging.ini  schema.graphql
server/: __init__.py  app.py  cef.py  flask.py  flask_app.py  gql.py  gui.py  health.py  health_test.py  ipc_handler.py  main.py  wev.py  wev_ipc_handler.py
web/: asset-manifest.json  index.html  precache-manifest.31e608e052fb265f4910ea04d9a52c67.js  precache-manifest.3c89887483a24048c7baec8ddb6371b7.js  precache-manifest.5a08cbf10a0185e352a34e1ecf79fcc8.js  precache-manifest.9b738dc2bc59f10bb06dfb4f7c356ff5.js  precache-manifest.e2c93bb81024aa33b6f497b1ff1749b8.js  service-worker.js
web/static/css/: main.b30eb540.chunk.css  main.b30eb540.chunk.css.map  main.f8c995ef.chunk.css  main.f8c995ef.chunk.css.map
web/static/js/: 2.5ea47113.chunk.js  2.5ea47113.chunk.js.map  main.0dc2f2ec.chunk.js  main.0dc2f2ec.chunk.js.map  main.20f8ac82.chunk.js  main.20f8ac82.chunk.js.map  main.2ffd6498.chunk.js  main.2ffd6498.chunk.js.map  main.cdc9e534.chunk.js  main.cdc9e534.chunk.js.map  main.f7d0e698.chunk.js  main.f7d0e698.chunk.js.map
