[tool.poetry]
name = "flask-react-template"
version = "0.1.0"
description = ""
authors = ["Jonathan Turnock <Jonathan.Turnock@outlook.com>"]

packages = [
    {include = "server"}
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-html = "^2.1.1"
pytest-cov = "^2.10.0"
pyclean = "^2.0.0"

[tool.poetry.scripts]
dev = "poetry_scripts:dev"
clean = "poetry_scripts:clean"
test = "poetry_scripts:test"
build = "poetry_scripts:build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
